# qgis-deployment-cli

./: .buildinfo  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  azure-pipelines.yml  azure-pipelines_export.json  bandit.yaml  codecov.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  sample-deployment-config.json  scenario.qdt.yml  search.html  searchindex.js  setup.cfg  setup.py  sonar-project.properties
.github/: dependabot.yml  labeler.yml  release.yml
_apidoc/: modules.html  qgis_deployment_toolbelt.cli.html  qgis_deployment_toolbelt.commands.cli_check.html  qgis_deployment_toolbelt.commands.cli_clean.html  qgis_deployment_toolbelt.commands.html  qgis_deployment_toolbelt.constants.html  qgis_deployment_toolbelt.html  qgis_deployment_toolbelt.jobs.html  qgis_deployment_toolbelt.jobs.job_environment_variables.html  qgis_deployment_toolbelt.jobs.job_profiles_synchronizer.html  qgis_deployment_toolbelt.jobs.job_shortcuts.html  qgis_deployment_toolbelt.jobs.orchestrator.html  qgis_deployment_toolbelt.profiles.html  qgis_deployment_toolbelt.profiles.remote_git_handler.html  qgis_deployment_toolbelt.profiles.shortcuts.html  qgis_deployment_toolbelt.scenarios.html  qgis_deployment_toolbelt.scenarios.scenario_reader.html  qgis_deployment_toolbelt.utils.bouncer.html  qgis_deployment_toolbelt.utils.html  qgis_deployment_toolbelt.utils.journalizer.html  qgis_deployment_toolbelt.utils.logger.html  qgis_deployment_toolbelt.utils.proxies.html  qgis_deployment_toolbelt.utils.slugger.html  qgis_deployment_toolbelt.utils.str2bool.html  qgis_deployment_toolbelt.utils.win32utils.html
_sources/: index.md.txt
builder/: manifest.xml  pyinstaller_build_macos.py  pyinstaller_build_ubuntu.py  pyinstaller_build_windows.py  template_win_exe_version_info.txt  tldextract_update.py  version_info_templater.py
conf/: plugins.yml
development/: contribute.html  documentation.html  history.html  packaging.html  releasing.html  testing.html  ubuntu.html  windows.html
docs/: conf.py  index.md  robots.txt
examples/: .gitignore  README.md  qdt-files.json
misc/: compatibility.html  credits.html  licenses.html
qgis_deployment_toolbelt/: __about__.py  __init__.py  cli.py  constants.py  exceptions.py
requirements/: base.txt  development.txt  documentation.txt  packaging.txt  security.txt  testing.txt
scripts/: qdt_dowloader.ps1
tests/: test_about.py  test_cli_check.py  test_cli_clean.py  test_cli_main.py  test_cli_rules_context_export.py  test_cli_upgrade.py  test_constants.py  test_git_handler.py  test_git_handler_local.py  test_git_handler_remote.py  test_job_environment_variables.py  test_job_environment_variables_linux.py  test_job_generic.py  test_job_profiles_sync.py  test_job_qgis_installation_finder.py  test_jobs_launch.py  test_qdt_profile_object.py  test_qgis_ini_helper.py  test_qgis_plugins_downloader.py  test_qplugin_object.py  test_rules_context.py  test_scenario_reader.py  test_shortcuts.py  test_tree_qdt-files_json.py  test_utils.py  test_utils_bouncer.py  test_utils_check_path.py  test_utils_file_downloader.py  test_utils_file_stats.py  test_utils_formatters.py  (+12 more)
(+254 files in other folders)
